--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="description"
           content="This is a music app made in react. It is the one stop music destination you wished for.">
 
-    <link rel="icon" href="/favicon.ico">
-    <link rel="manifest" href="/manifest.json"/>
+    <link rel="icon" href="/%PUBLIC_URL%/favicon.ico">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <meta name="theme-color" content="#000000"/>
 
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Pacifico&display=swap" rel="stylesheet">
